syntax = "proto3";
package note;

option go_package = "./rpc_impl";
option optimize_for = LITE_RUNTIME;

import "common.proto";

service INote {
  rpc List(Note.ListReq) returns (Note.ListRes);
  rpc Create(Note.CreateReq) returns (Note.CreateRes);
  rpc Modify(Note.ModifyReq) returns (Note.ModifyRes);
  rpc Delete(Note.DeleteReq) returns (Note.DeleteRes);
}

message Note {
  message Data {
    string note_id = 1;
    string write_by = 2;
    string topic = 3;
    string content = 4;
    bool is_public = 5;
    int64 update_time = 6;
    int64 created_time = 7;
  }

  enum ListRule {
    LIST_RULE_UNSPECIFIED = 0;
    LIST_RULE_WRITER = 1;
    LIST_RULE_PUBLIC = 2;
  }

  message ListReq {
    ListRule rule = 1;
    string operator_id = 2;

    common.Pagination page = 15;
  }

  message ListRes {
    uint32 total = 1;
    repeated Data notes = 2;

    common.Error err = 15;
  }

  message CreateReq {
    string operator_id = 1;
    string topic = 2;
    string content = 3;
    bool is_public = 4;
  }

  message CreateRes {
    common.Error err = 15;
  }

  message ModifyReq {
    string operator_id = 1;
    string note_id = 2;
    string password = 3;
    string topic = 4;
    string content = 5;
    bool is_public = 6;
  }

  message ModifyRes {
    common.Error err = 15;
  }

  message DeleteReq {
    string operator_id = 1;
    string password = 2;
    string note_id = 3;
  }

  message DeleteRes {
    common.Error err = 15;
  }
}
